syntax = "proto3";
package wavesenterprise;

option java_multiple_files = true;
option java_package = "com.wavesenterprise.transaction.protobuf";
option csharp_namespace = "WavesEnterprise";
option go_package = "wavesenterprise.com/weproto";

import "google/protobuf/wrappers.proto";
import "atomic_badge.proto";

message PolicyDataHashTransaction {
  bytes id = 1;
  bytes sender_public_key = 2;
  bytes data_hash = 3;
  bytes policy_id = 4;
  int64 timestamp = 5;
  int64 fee = 6;
  google.protobuf.BytesValue fee_asset_id = 7;
  AtomicBadge atomic_badge = 8;
  repeated bytes proofs = 9;
  bytes sender_address = 10;
}